--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
     "sass": "^1.56.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "packageManager": "pnpm@6.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
