--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "travel-app",
+  "name": "traveasy",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,7 +14,6 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^3.0.0-beta.6",
     "axios": "^1.1.3",
-    "babel-loader": "^9.1.0",
     "bootstrap": "^5.2.2",
     "date-fns": "^2.29.3",
     "react": "^18.2.0",
@@ -25,13 +24,12 @@
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
     "react-stripe-checkout": "^2.6.3",
-    "react-toastify": "^9.1.1",
+    "react-toastify": "^9.1.3",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
     "sass": "^1.56.0",
-    "web-vitals": "^2.1.4",
-    "packageManager": "pnpm@6.3.2"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
